fix: Update fixes per code review
- Fix breadcrumbs
- Change h1 to h2 on restaurant page
- Change alt text of images
- Add aria-label for View Details button
- Update responsiveness of filter select elements

--- a/css/media-styles.css
+++ b/css/media-styles.css
@@ -94,6 +94,7 @@
   /* ====================== Restaurant Details ====================== */
   #breadcrumb {
     width: 100%;
+    text-align: left;
   }
 
   .inside #maincontent {
@@ -139,6 +140,10 @@
   .inside #footer {
     position: relative;
     width: 100%;
+  }
+
+  .filter-options select {
+    width: calc((100%/2) - 20px);
   }
 }
 
