--- a/css/styles.css
+++ b/css/styles.css
@@ -52,16 +52,16 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
   text-transform: uppercase;
 }
 /* ====================== Navigation ====================== */
-nav {
+header {
   width: 100%;
   height: 80px;
   background-color: #252831;
   text-align:center;
 }
-nav h1 {
+header h1 {
   margin: auto;
 }
-nav h1 a {
+header h1 a {
   color: #fff;
   font-size: 14pt;
   font-weight: 200;
@@ -109,12 +109,15 @@ nav h1 a {
 }
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
+  display: flex;
+  flex-wrap: wrap;
   width: 100%;
   background-color: #1F77B2;
   align-items: center;
 }
-.filter-options h2 {
-  color: white;
+
+h2 {
+  color: black;
   font-size: 1rem;
   font-weight: normal;
   line-height: 1;
@@ -131,7 +134,7 @@ nav h1 a {
   letter-spacing: 0;
   margin: 10px;
   padding: 0 10px;
-  width: 200px;
+  width: 100%;
 }
 
 .filter-options select:focus,
@@ -149,7 +152,11 @@ nav h1 a {
   margin-right: auto;
   padding: 30px 15px 60px;
   text-align: center;
+}
+
+.results-container {
   max-width:1200px;
+  margin: auto;
 }
 
 #restaurants-list li {
