--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,2 +1,7 @@
+@import 'mixins';
+@import 'general';
 @import 'main';
 @import 'media-styles';
+@import 'form';
+@import 'deferredModal';
+@import 'review';
